[gd_scene format=3 uid="uid://bf36h4obgl3tj"]

[ext_resource type="Texture2D" uid="uid://d0sjv8slse3xi" path="res://Art/exclamation.png" id="1"]
[ext_resource type="Script" uid="uid://ckq68x26nfinw" path="res://Scenes/BulleDessin.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bgfg81nthy3cd" path="res://Art/ov_vide.png" id="4"]
[ext_resource type="Script" uid="uid://dwxv1ggaxxiuk" path="res://Scenes/Tresor.gd" id="5"]
[ext_resource type="Script" uid="uid://b1rgx84n4fejh" path="res://Scenes/PrendreTresor.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://detqoyyyj0dd7" path="res://Son/frottement.wav" id="8"]

[sub_resource type="CircleShape2D" id="1"]
radius = 180.0

[sub_resource type="CircleShape2D" id="2"]
radius = 50.0

[sub_resource type="CircleShape2D" id="3"]
radius = 150.0

[node name="Tresor" type="Node2D" unique_id=513180559]
script = ExtResource("5")

[node name="Exclamation" type="Area2D" parent="." unique_id=1049237055]
collision_mask = 2
monitorable = false

[node name="CollisionLarge" type="CollisionShape2D" parent="Exclamation" unique_id=1256933486]
shape = SubResource("1")

[node name="ExclamationPoint" type="Sprite2D" parent="Exclamation" unique_id=1818799923]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("1")

[node name="Bulle" type="Area2D" parent="." unique_id=1958742949]
collision_mask = 2
monitorable = false

[node name="CollisionPrecise" type="CollisionShape2D" parent="Bulle" unique_id=1368538795]
shape = SubResource("2")

[node name="BulleDessin" type="Sprite2D" parent="Bulle" unique_id=1061851191]
position = Vector2(0, -50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4")
script = ExtResource("3")

[node name="ImgTresor" type="Sprite2D" parent="Bulle/BulleDessin" unique_id=1512899196]
unique_name_in_owner = true

[node name="PrendreTresor" type="Area2D" parent="Bulle/BulleDessin" unique_id=1974308701]
collision_mask = 2
monitorable = false
script = ExtResource("7")

[node name="CollisionPrendre" type="CollisionShape2D" parent="Bulle/BulleDessin/PrendreTresor" unique_id=966339238]
shape = SubResource("3")

[node name="SonRamasse" type="AudioStreamPlayer2D" parent="." unique_id=1401854154]
stream = ExtResource("8")
max_distance = 5000.0

[connection signal="body_entered" from="Exclamation" to="." method="_on_exclamation_body_entered"]
[connection signal="body_entered" from="Bulle" to="Bulle/BulleDessin" method="_on_Bulle_body_entered"]
[connection signal="body_entered" from="Bulle" to="Bulle/BulleDessin/PrendreTresor" method="_on_Bulle_body_entered"]
[connection signal="body_exited" from="Bulle" to="Bulle/BulleDessin" method="_on_Bulle_body_exited"]
[connection signal="body_exited" from="Bulle" to="Bulle/BulleDessin/PrendreTresor" method="_on_Bulle_body_exited"]
[connection signal="body_entered" from="Bulle/BulleDessin/PrendreTresor" to="." method="_on_PrendreTresor_body_entered"]
